--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@chakra-ui/radio": "^2.0.11",
     "html-entities": "^2.3.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
